@@ -2,9 +2,9 @@ AUX apache_exporter.confd 59 BLAKE2B 4466ae408352adc136fa882cf382c1562e8e0b6401e
 AUX apache_exporter.initd 650 BLAKE2B 86d014a2bb4f98a54a5e98060884bb99d1ec4011ce028a981d9d39cc5a5292c39018a80df2a3f0ad4b97aa1a0da059e89ad151f0a0b3d13d6ba6386aa4a9d6d4 SHA512 42367bb35b79cb3c4946ae57e81fa918d94b9b5613469e1e070797ffc9ab7ae74aaa3ad244be35cef8fe5df043fb5e1a604449c3a416e01da7cb11ad95c2b5b1
 AUX apache_exporter.service 196 BLAKE2B b7429d240256bdbe594741900bd1715d7806f604d420b668c83ed2b4f66b32ba1ff142a54e04687182c0b24f43d58c6d74f5b319d69aaa4619d4b561a9567913 SHA512 a93847eb9407e94388a606972373a2e9c51ca46f16b8a87365d8544b680d1d0fbf47a6eb86865621375015a58c8b6480aeefa247f37c31fa0a84383a27a915f7
 AUX sysconfig.apache_exporter 11 BLAKE2B e83c8a1c6cf0d2269d032d80bfb5f37969adce8655298d49f942e19318e1fcabe7f618514ce65d9e0209959d5ccb38141e81fcccd65a754584eaf2db3b4fbd03 SHA512 f4d982f86de30c5b52b04c201cd38fffa87f860bef18af6ab85e856ae2081b919256b918b5f4821ee2fc4da0548d1a95c2522b29cddca57f694e2f26c1b1b2b9
-DIST apache_exporter-0.10.1.tar.gz 32524 BLAKE2B ecaea321997c8ecac402e078ae7c84b2a7762cb98ab760001a053e804ec09f3a73f30d3647cb3ee30ccc29041e95d427a82389fcb64b35770999b224aab8c68a SHA512 53e51b64e12f7af8cf37bd137ae21712e088ea280c6c812588421ecc3e202c5223e4d7f318de3cea3858c9490b16fdfd3e587f084fc957f945e8b9740318666a
+DIST apache_exporter-0.11.0.tar.gz 41172 BLAKE2B 7c03a62ad8d7c76c80fcd7bac6c73079ef6caf7d0924c00559d788cdab98d89342e453056e52ad7d5f908521fdebaf99b8103c69fa46e0da15789cca0e74e5e9 SHA512 98ba30804bbd9a46ff0728e8bd8b02f6820492e0e44a60122acc9727c4e3fbabefb135f66ee36820e90cf6322b5e7335578eb8568a8f1fe6aead279a050e8208
 DIST apache_exporter-0.8.0.tar.gz 1687423 BLAKE2B 8ffe1edd6549c6129ec82852ee7134ba3ceb22f6ab6c678e0c28e6ed58c43d0243184efed013e11e3062b4359beb43914059bc35a31f242c93ef210616248fc7 SHA512 1e885687a8a2d5abfbf16f11d1940688b65404e76fa620ef397eb85733ab0fa9ec9ba4143728466d3036266a6f3ef03409000a7c69d85e2be6eda2075bc8a113
-EBUILD apache_exporter-0.10.1.ebuild 1339 BLAKE2B 331d61319a9f092d2817964fa8fe0e2a4384c3370e90493ddc85c0ac4e15dd881f856070b82ca87a698f24b82b4970a2d00fef4e42ba612634a06bc90dd066a8 SHA512 35f53639fde417b863a87080e6aba137cfd1ed48b556607f7c52e5db13b8969b4b9a57f8767ba3b20c61bb98ddb5d2626615122b93a61d7a0b4b77d069a95d62
+EBUILD apache_exporter-0.11.0.ebuild 1339 BLAKE2B c97ac2c7cfd00bdec8cdb085edb4e0f89b098764e75462180c5596f98f1a1cedd78c443128902502458581b45c855e7648c243dc481bef08fa5ff41ec76e2d95 SHA512 fd8e9ab47b27bc813b9c71f64ced9ccdecc1e8d68c51449a7d2581e0d726d357dfb9c9eda1e2656a091c8328d7f4d094e03185f5516b3f917c1da10aa032b2be
 EBUILD apache_exporter-0.8.0-r1.ebuild 1339 BLAKE2B d1fd6596f842ba122c57dc59cbf7f23b49aade25df361734e214eca3ae9924a74c2f253b741238da06091a9f102953e7e7a68bbd86b4080d9c7372d1e854225f SHA512 df27ff9f4fa0ecf4a8011d0a5f5a42339fde421742794a89a425eaa34640aff86340fa4f65e108b4b0c225bd7862551b04e4c4cf160b3acaee1be8bd271a5dce
-MISC ChangeLog 1314 BLAKE2B 271acff9b9434a1c2d5269836ff74c72f294b42fa83044a72bde0b49f0ad4ca8a175068258cf3d031a80bee24614ae6f95112d67887709a1762069006d134e74 SHA512 27c1fe5e955470dcc6e99e88392c395cbce1ecffa74ded9f39c87261fd09375d3608a29aca96d61ef0d1833c680b161c959f56af7df41e2bcff4123e16a31b4e
+MISC ChangeLog 1523 BLAKE2B 97fba905e5b228dffea9027d7fb787d6b51d6653e96d79522d8f3c7d4b9910172f82f4e91f3f0ca5dd23936e1792fe6ab9968c1e94e19c8ce279593ed551efd2 SHA512 be1633aec623701f7311868fc9d63f3a07080a0016e84b5b4904ab41efb9ba4b3c2ccfada75b128b5a203ec4429a56cac62892e4bf747e05e72bce3b758ce3ad
 MISC metadata.xml 337 BLAKE2B bd72b6097fead5eaf80082790d3712ae0893b118140b62f58639f0e5c56bebf57dbd0ccd0ea19af82b2dce88c88c494d88290f98df4818e4fad3f4386398d171 SHA512 aee4825d8b90a8fd84fb558b9af4b7eb889fcf81bae6c7b317a9d69f62b06dd0f0bc2aa91aa2c32f10ff91fdbf64b341d7e5adc3c65a5225c7e0e92d7a6b7816
