@@ -1,3 +1,9 @@
+*apache_exporter-0.11.0 (30 Apr 2022)
+
+  30 Apr 2022; Manuel Friedli <manuel@gentoo.org>
+  +apache_exporter-0.11.0.ebuild, -apache_exporter-0.10.1.ebuild:
+  app-metrics/apache_exporter: Add ebuild for 0.11.0
+
 *apache_exporter-0.10.1 (12 Oct 2021)
 
   12 Oct 2021; Manuel Friedli <manuel@gentoo.org>
